$Id: ChangeLog,v 1.111 2010/06/01 20:26:45 tho Exp $

ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html

LibU X.Y.Z
	- [uri] the URI parser set flags while decoding (e.g. tell if the host
	  is IP address or DNS name.)
	- [daemon] fix compilation on uClinux
	- [buf] u_buf_shrink added
	- [net] fix u_connect_ex timeout re-computation on EINTR to take care
	  of Linux non-POSIX compliant behaviour; also check the updated timeout 
	  value after EINTR to catch corner case underflow conditions.
	- [net] disable u_net_nagle_off() on Minix
	- [array] #undef 'I' (imaginary unit) when including complex.h to avoid
	  name clash -- e.g. with openssl/rsa.h
	- [net] fix u_connect buggy behaviour on EINTR (reported by Mickael Auger)
	- [net] add _ex variants to socket creation interfaces to handle timeouted
	  operations
	- [net] ai_resolv fix: don't ask for AI_CANONNAME when hostname is NULL
	- [hmap] header cleanup: remove object and policy struct's explicit layout;
	  added u_hmap_{easy_,}clear() ; missing u_hmap_opts_free() calls in test/
	- [test] fix conditional include logics that enables sandboxing
	- [str] don't rely on calloc for initialization of str object internal vars

LibU 2.1.0
	- fix bug in configure when handling the inline keyword support
	- Minix 3.8.1 port
	- fix configure to please OpenBSD when searching for [gs]etsockopt and
	  rusage structure
	- [string] new interface u_string_detach_cstr
	- [lexer] new module to do basic lexical tokenizing 
	- [json] new module to encode/decode/validate JSON objects (RFC 4627)
	- [bst] new binary search tree module
	- [misc] added u_atol and u_atof interfaces
	- [rb] malloc based implementation, both using contiguous (i.e. double
	  sized) and wrapped buffer ; make it work on Windows
	- [test] make it work on Windows
	- [uri] regex-free uri parser (now recursive descent) ; make it work on
	  MinGw ; path is now optional and has default value "/" ; fixed missing 
	  "//" in u_uri_knead_authority()