@@ -3,8 +3,11 @@ $Id: ChangeLog,v 1.111 2010/06/01 20:26:45 tho Exp $
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU X.Y.Z
+	- [uri] fix excessively greedy match in IP-literal parser when there is no
+	  path component.
 	- [uri] the URI parser set flags while decoding (e.g. tell if the host
-	  is IP address or DNS name.)
+	  is IP address or DNS name, or if it is an IP-literal and needs special
+	  treatment when encoding.)
 	- [daemon] fix compilation on uClinux
 	- [buf] u_buf_shrink added
 	- [net] fix u_connect_ex timeout re-computation on EINTR to take care
